[package]
name = "pachip8risu"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.4", features = [
    "alloc",
    "small_rng",
], default-features = false }
anyhow = { version = "1.0.93", default-features = false }

[profile.dev]
overflow-checks = false

[workspace]
members = ["./playdate", "./ruscii"]
