[package]
name = "pachip8risu-playdate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[features]
debug-print-opcode = []
debug-profile = []
debug-gfx = []

[dependencies]
playdate = "0.2.6"
crankit-game-loop = { git = "https://github.com/pomettini/crankit-game-loop.git" }
rand = { version = "0.9.0", features = ["small_rng"], default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
anyhow = { version = "1.0.93", default-features = false }

# Playdate Package Info
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#metadata
# official doc: https://sdk.play.date/#pdxinfo
[package.metadata.playdate]
name = "SUPERCHIP50"
author = "Giorgio Pomettini"
version = "0.1.0"
bundle-id = "com.pomettini.chip8"
description = "Chip-8 emulator"
# image-path = "img/system"

# Assets Rules
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#assets
[package.metadata.playdate.assets]
# "img/system/" = "assets/launcher/card.png"

# Assets Configuration
[package.metadata.playdate.options.assets]
dependencies = true
overwrite = true
method = "link"
follow-symlinks = true

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

debug = 0
strip = "symbols"
debug-assertions = false

[lints.clippy]
pedantic = "warn"
