[package]
name = "chip8_playdate"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
overflow-checks = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
crankstart = { path = "./crankstart" }
crankstart-sys = { path = "./crankstart/crankstart-sys" }
anyhow = { version = "1.0.31", default-features = false }
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
hashbrown = "0.7.2"
heapless = "0.5.5"
mchip8 = { path = "../mchip8" }

[dependencies.cstr_core]
version = "=0.1.2"
default-features = false
features = [ "alloc" ]
